Added working animations and adjusted some graphics

--- a/public/html/hockey-scoreboard.html
+++ b/public/html/hockey-scoreboard.html
@@ -286,13 +286,18 @@
 <!-- BUTTONS SECTION START -->
 		<div id="bot_1" class="row inherit_w">
 			<div class="col inherit_h end_btn_sides">
-				<button id="home_timeout" class="inherit_w inherit_h">Timeout</button>
+				<div class="row inherit_w end_btn_side_v"><div class="col inherit_w inherit_h">
+					<button id="home_timeout" class="inherit_w inherit_h">Timeout</button>
+				</div></div>
+				<div class="row inherit_w end_btn_side_v"><div class="col inherit_w inherit_h">
+					<button id="home_challenge" class="inherit_w inherit_h">Challenge</button>
+				</div></div>
+				<div class="row inherit_w end_btn_side_v"><div class="col inherit_w inherit_h">
+					<button id="home_timeout" class="inherit_w inherit_h">Timeout</button>
+				</div></div>
 			</div>
 			<div class="col inherit_h end_btn_sides">
-				<button id="home_empty_net" class="inherit_w inherit_h">Empty Net</button>
-			</div>
-			<div class="col inherit_h end_btn_sides">
-				<button id="home_challenge" class="inherit_w inherit_h">Challenge</button>
+				<button id="home_goal" class="inherit_w inherit_h">Goal</button>
 			</div>
 
 			<div class="col inherit_h end_btn_mid margin_sides_1">
@@ -304,15 +309,20 @@
 				</div></div>
 
 			</div>
+			<div class="col inherit_h end_btn_sides">
+				<button id="away_goal" class="inherit_w inherit_h">Goal</button>
+			</div>
 
 			<div class="col inherit_h end_btn_sides">
-				<button id="away_challenge" class="inherit_w inherit_h">Challenge</button>
-			</div>
-			<div class="col inherit_h end_btn_sides">
-				<button id="away_empty_net" class="inherit_w inherit_h">Empty Net</button>
-			</div>
-			<div class="col inherit_h end_btn_sides">
-				<button id="away_timeout" class="inherit_w inherit_h">Timeout</button>
+				<div class="row inherit_w end_btn_side_v"><div class="col inherit_w inherit_h">
+					<button id="away_timeout" class="inherit_w inherit_h">Timeout</button>
+				</div></div>
+				<div class="row inherit_w end_btn_side_v"><div class="col inherit_w inherit_h">
+					<button id="away_challenge" class="inherit_w inherit_h">Challenge</button>
+				</div></div>
+				<div class="row inherit_w end_btn_side_v"><div class="col inherit_w inherit_h">
+					<button id="away_timeout" class="inherit_w inherit_h">Timeout</button>
+				</div></div>
 			</div>
 
 		</div>
