Removed some unnecessary CSS

--- a/hockey-scoreboard.html
+++ b/hockey-scoreboard.html
@@ -193,8 +193,8 @@
 						</div>
 					</div></div>
 					<div class="col inherit_h penalty_col"><div class="row inherit_w inherit_h">
-						<div class="col inherit_h penalty_col_1">Penalty Length:</div>
-						<div class="col inherit_h penalty_col_2">
+						<div class="col inherit_h penalty_col_4">Penalty Length:</div>
+						<div class="col inherit_h penalty_col_3">
 							<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)" class="inherit_w	inherit_h">
 								<option>0:15</option>
 								<option>0:30</option>
@@ -273,8 +273,8 @@
 						</div>
 					</div></div>
 					<div class="col inherit_h penalty_col"><div class="row inherit_w inherit_h">
-						<div class="col inherit_h penalty_col_1">Penalty Length:</div>
-						<div class="col inherit_h penalty_col_2">
+						<div class="col inherit_h penalty_col_4">Penalty Length:</div>
+						<div class="col inherit_h penalty_col_3">
             				<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)" class="inherit_w	inherit_h">
 								<option>0:15</option>
 								<option>0:30</option>
@@ -315,6 +315,36 @@
 						</div>
 					</div>
 					<!-- end away infraction 1 -->
+
+
+
+					<div class="row inherit_w penalty_list_item">
+						<div class="col inherit_h penalty_col">12</div>
+						<div class="col inherit_h penalty_col">1:41</div>
+						<div class="col inherit_h penalty_col">Slashing</div>
+						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div>
+					<div class="row inherit_w penalty_list_item">
+						<div class="col inherit_h penalty_col">12</div>
+						<div class="col inherit_h penalty_col">1:41</div>
+						<div class="col inherit_h penalty_col">Slashing</div>
+						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div><div class="row inherit_w penalty_list_item">
+						<div class="col inherit_h penalty_col">12</div>
+						<div class="col inherit_h penalty_col">1:41</div>
+						<div class="col inherit_h penalty_col">Slashing</div>
+						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div><div class="row inherit_w penalty_list_item">
+						<div class="col inherit_h penalty_col">12</div>
+						<div class="col inherit_h penalty_col">1:41</div>
+						<div class="col inherit_h penalty_col">Slashing</div>
+						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div><div class="row inherit_w penalty_list_item">
+						<div class="col inherit_h penalty_col">12</div>
+						<div class="col inherit_h penalty_col">1:41</div>
+						<div class="col inherit_h penalty_col">Slashing</div>
+						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div><div class="row inherit_w penalty_list_item">
+						<div class="col inherit_h penalty_col">12</div>
+						<div class="col inherit_h penalty_col">1:41</div>
+						<div class="col inherit_h penalty_col">Slashing</div>
+						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div>
+					<!-- temp infractions ^ -->
 
 				</div></div>
 			</div>
