--- a/hockey-scoreboard.html
+++ b/hockey-scoreboard.html
@@ -7,7 +7,7 @@
 	<title>&#x2730;Hockey Scoreboard</title>
 </head>
 	<body class="fullscreen"><div class="container fullscreen">
-		<div id="header_1" class="row inherit_w"><div class="column inherit_w inherit_h">
+		<div id="header" class="row inherit_w"><div class="column inherit_w inherit_h">
 			<h1>Hockey Scoreboard</h1>
 		</div></div>
 		
