Finished header bar and expandable menu

--- a/control-panel.html
+++ b/control-panel.html
@@ -3,16 +3,24 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="/css/scoreboard.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap" rel="stylesheet">
+
+<!-- JS Scripts for Menu Bar -->
+    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="menu-bar.js"></script>
+
 	<title>Control Panel</title>
 </head>
 <body class="fullscreen"><div class="container fullscreen">
+	
+<!-- HEADER + MENU BAR START -->
+	<div id="menu_bar"></div>
 	<div id="header" class="row inherit_w">
-		<div class="col menu_btn_div inherit_h"><button class="menu_btn inherit_w inherit_h">☰</button></div>
+		<div class="col menu_btn_div inherit_h"><button id="header_menu_btn" class="menu_btn inherit_w inherit_h">☰</button></div>
 		<div class="menu">Test</div>
-		<div class="col inherit_h">
+		<div class="col inherit_h menu_main_div">
 			<h1>Control Panel</h1>
 		</div>
-		<div class="col inherit_h">
+		<div class="col inherit_h menu_mode_div">
 			<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('game_select').value)" class="inherit_h">
 				<option>Hockey</option>
 				<option>Baseball</option>
@@ -20,6 +28,8 @@
 			</select>  
 		</div>
 	</div>
+<!-- ========================= -->
+
 
 	<div class="row inherit_w game_select"><div class="col inherit_h control_panel_center">
 		<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)">
