Cleaned up CSS and removed team select from control panel

--- a/control-panel.html
+++ b/control-panel.html
@@ -21,11 +21,11 @@
 			<h1>Control Panel</h1>
 		</div>
 		<div class="col inherit_h menu_mode_div">
-			<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('game_select').value)" class="inherit_h">
+			<!-- <select id="mode_select" onchange="send_event('mode_switch',document.getElementById('game_select').value)" class="inherit_h">
 				<option>Hockey</option>
 				<option>Baseball</option>
 				<option>Football</option>
-			</select>  
+			</select>   -->
 		</div>
 	</div>
 <!-- ========================= -->
