--- a/public/html/hockey-scoreboard.html
+++ b/public/html/hockey-scoreboard.html
@@ -1,70 +1,50 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
+	
 	<link rel="stylesheet" type="text/css" href="/css/scoreboard.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap" rel="stylesheet">
-
-<!-- JS Scripts for Menu Bar -->
-    <script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../menu-bar.js"></script>
-
-	<title>Hockey Scoreboard</title>
+	<title>&#x2730;Hockey Scoreboard</title>
 </head>
-<meta name="viewport" content="width=device-width, user-scalable=no" />
-<body class="fullscreen"><div class="container fullscreen">
-
-<!-- HEADER + MENU BAR START -->
-	<div id="menu_bar"></div>
-	<div id="header" class="row inherit_w">
-		<div class="col menu_btn_div inherit_h"><button id="header_menu_btn" class="menu_btn inherit_w inherit_h">☰</button></div>
-		<div class="menu">Test</div>
-		<div class="col inherit_h menu_main_div">
-			<h1>Hockey Scoreboard</h1>
-		</div>
-		<div class="col inherit_h menu_mode_div">
-			<select id="game_select" onchange="send_event('mode_switch',document.getElementById('game_select').value)" class="inherit_h">
-				<option>Hockey</option>
-				<option>Baseball</option>
-				<option>Football</option>
-			</select>  
-		</div>
-	</div>
-<!-- ========================= -->
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
+	<body class="fullscreen"><div class="container fullscreen">
+		<div id="header_1" class="row inherit_w"><div class="column inherit_w inherit_h">
+			<h1>Hockey Scoreboard</h1><select id="game_select" style="float:right"></select>
+		</div></div>
 		
-
 <!-- TOP SECTION START -->
 		<div id="top_1" class="row inherit_w">
 
 	<!-- HOME STATS START ================================= -->
 			<div id="home_stats" class="column inherit_h stats_1">
 				<div class="row inherit_w stats_title_1"><div class="column inherit_w inherit_h">
-					<h3 class="stats_title_text_1">Home</h3>
+					<h3 class="stats_title_text_1 home_location">Home</h3>
 				</div></div>
 				<div class="row inherit_w stats_score_1">
 					<div class="column inherit_h stats_section_1 margin_right_1">
-						<p id="home_shots" class="inherit_h stats_score_num">22</p>
+						<p id="home_shots" class="home_shots inherit_h stats_score_num">22</p>
 						<p class="inherit_h stats_score_text">Shots</p>
 					</div>
 					<div class="column inherit_h stats_section_1">
-						<p id="home_score" class="inherit_h stats_score_num">3</p>
+						<p id="home_score" class="inherit_h home_score stats_score_num">3</p>
 						<p class="inherit_h stats_score_text">Score</p>
 					</div>
 				</div>
 				<div class="row inherit_w stats_button_1">
 					<div class="column inherit_h stats_button_section margin_right_1">
 						<div class="row inherit_w stats_button_section_v"><div class="column inherit_w inherit_h">
-							<button id="home_shots_button_plus" class="inherit_w inherit_h btn_plus">+</button>
+							<button id="home_shots_up" class="inherit_w inherit_h btn_plus">+</button>
 						</div></div>
 						<div class="row inherit_w stats_button_section_v margin_top_1"><div class="column inherit_w inherit_h">
-							<button id="home_shots_button_minus" class="inherit_w inherit_h btn_minus">-</button>
+							<button id="home_shots_down" class="inherit_w inherit_h btn_minus">-</button>
 						</div></div>
 					</div>
 					<div class="column inherit_h stats_button_section">
 						<div class="row inherit_w  stats_button_section_v"><div class="column inherit_w inherit_h">
-							<button id="home_score_button_plus" class="inherit_w inherit_h btn_plus">+</button>
+							<button id="home_score_up" class="inherit_w inherit_h btn_plus">+</button>
 						</div></div>
 						<div class="row inherit_w  stats_button_section_v margin_top_1"><div class="column inherit_w inherit_h">
-							<button id="home_score_button_minus" class="inherit_w inherit_h btn_minus">-</button>
+							<button id="home_score_down" class="inherit_w inherit_h btn_minus">-</button>
 						</div></div>
 					</div>
 				</div>
@@ -74,7 +54,7 @@
 
 
 	<!-- TIMER SECTION START ================================ -->
-			<div id="timer_block" class="column inherit_h timer_1">
+			<div class="column inherit_h timer_1">
 				<div class="row inherit_w timer_clock"><div class="col inherit_w inherit_h">
 
 		<!-- Timer Time Increment -->			
@@ -101,25 +81,25 @@
 
 		<!-- Timer Times -->	
 					<div class="row inherit_w timer_num_row">
-						<div id="timer_m1_num" class="col inherit_h timer_div_7 timer_num margin_right_1">
+						<div id="timer_m1_num" class="col m1 inherit_h timer_div_7 timer_num margin_right_1">
 			<!--m1# -->		1
 						</div>
-						<div id="timer_m2_num" class="col inherit_h timer_div_7 timer_num margin_right_1">
+						<div id="timer_m2_num" class="col m2 inherit_h timer_div_7 timer_num margin_right_1">
 			<!--m2# -->		8
 						</div>
 						<div class="col inherit_h timer_div_7 timer_num margin_right_1">
 							:
 						</div>
-						<div id="timer_s1_num" class="col inherit_h timer_div_7 timer_num margin_right_1">
+						<div id="timer_s1_num" class="col s1 inherit_h timer_div_7 timer_num margin_right_1">
 			<!--s1# -->		2
 						</div>
-						<div id="timer_s2_num" class="col inherit_h timer_div_7 timer_num margin_right_1">
+						<div id="timer_s2_num" class="col s2 inherit_h timer_div_7 timer_num margin_right_1">
 			<!--s2# -->		4
 						</div>
 						<div class="col inherit_h timer_div_7 timer_num margin_right_1">
 							.
 						</div>
-						<div id="timer_ms_num" class="col inherit_h timer_div_7 timer_num">
+						<div id="timer_ms_num" class="col ms inherit_h timer_div_7 timer_num">
 			<!--ms- -->		5
 						</div>
 					</div>
@@ -148,7 +128,7 @@
 				</div></div>
 		<!-- Timer Start/Stop Button -->
 				<div class="row inherit_w timer_clock_btn margin_top_2">
-					<button id="timer_btn" class="inherit_w inherit_h">Clock Start/Stop</button>
+					<button id="btn_clock" value="start" class="inherit_w inherit_h">Clock Start/Stop</button>
 				</div>
 			</div>
 	<!-- TIMER SECTION END ================================== -->
@@ -157,33 +137,33 @@
 	<!-- AWAY STATS START =================================== -->
 			<div id="away_stats" class="column inherit_h stats_1">
 				<div class="row inherit_w stats_title_1"><div class="column inherit_w inherit_h">
-					<h3 class="stats_title_text_1">Away</h3>
+					<h3 class="stats_title_text_1 away_location">Away</h3>
 				</div></div>
 				<div class="row inherit_w stats_score_1">
 					<div class="column inherit_h stats_section_1 margin_right_1">
-						<p id="away_score" class="inherit_h stats_score_num">2</p>
+						<p id="away_score" class="inherit_h away_score stats_score_num">2</p>
 						<p class="inherit_h stats_score_text">Score</p>
 					</div>
 					<div class="column inherit_h stats_section_1">
-						<p id="away_shots" class="inherit_h stats_score_num">15</p>
+						<p id="away_shots" class="inherit_h away_shots stats_score_num">15</p>
 						<p class="inherit_h stats_score_text">Shots</p>
 					</div>
 				</div>
 				<div class="row inherit_w stats_button_1">
 					<div class="column inherit_h stats_button_section margin_right_1">
 						<div class="row inherit_w stats_button_section_v"><div class="column inherit_w inherit_h">
-							<button id="away_score_button_plus" class="inherit_w inherit_h btn_plus">+</button>
+							<button id="away_score_up" class="inherit_w inherit_h btn_plus">+</button>
 						</div></div>
 						<div class="row inherit_w stats_button_section_v margin_top_1"><div class="column inherit_w inherit_h">
-							<button id="away_score_button_minus" class="inherit_w inherit_h btn_minus">-</button>
+							<button id="away_score_down" class="inherit_w inherit_h btn_minus">-</button>
 						</div></div>
 					</div>
 					<div class="column inherit_h stats_button_section">
 						<div class="row inherit_w  stats_button_section_v"><div class="column inherit_w inherit_h">
-							<button id="away_shots_button_plus" class="inherit_w inherit_h btn_plus">+</button>
+							<button id="away_shots_up" class="inherit_w inherit_h btn_plus">+</button>
 						</div></div>
 						<div class="row inherit_w  stats_button_section_v margin_top_1"><div class="column inherit_w inherit_h">
-							<button id="away_shots_button_minus" class="inherit_w inherit_h btn_minus">-</button>
+							<button id="away_shots_down" class="inherit_w inherit_h btn_minus">-</button>
 						</div></div>
 					</div>
 				</div>
@@ -206,73 +186,36 @@
 					<div class="col inherit_h penalty_col"><div class="row inherit_w inherit_h">
 						<div class="col inherit_h penalty_col_1">Number:</div>
 						<div class="col inherit_h penalty_col_2">
-							<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)" class="inherit_w	inherit_h">
-								<option>1</option>
-								<option>2</option>
-								<option>3</option>
-							</select> 
+            				<select id="home_new_penalty_number" value="0" class="inherit_w inherit_h"></select>
 						</div>
 					</div></div>
 					<div class="col inherit_h penalty_col"><div class="row inherit_w inherit_h">
-						<div class="col inherit_h penalty_col_4">Penalty Length:</div>
-						<div class="col inherit_h penalty_col_3">
-							<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)" class="inherit_w	inherit_h">
-								<option>0:15</option>
-								<option>0:30</option>
-								<option>0:45</option>
-							</select>  
+						<div class="col inherit_h penalty_col_1">Penalty Length:</div>
+						<div class="col inherit_h penalty_col_2">
+            				<select id="home_new_penalty_time" value="2" class="inherit_w inherit_h">
+            					<option value="2" >2:00</option>
+								<option value="4" >4:00</option>
+								<option value="5" >5:00</option>
+            				</select> 
 						</div>
 					</div></div>
 					<div class="col inherit_h penalty_col"><div class="row inherit_w inherit_h">
 						<div class="col inherit_h penalty_col_3">Infraction</div>
 						<div class="col inherit_h penalty_col_3">
-            				<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)" class="inherit_w	inherit_h">
-								<option>Roughing</option>
-								<option>Tripping</option>
-								<option>Slashing</option>
+            				<select id="home_new_penalty_infraction" class="inherit_w	inherit_h">
 							</select> 
 						</div>
 					</div></div>
-					<div class="col inherit_h penalty_btn">
+					<div id="add_home_penalty" class="col inherit_h penalty_btn">
 						<button class="inherit_w inherit_h btn_plus">+</button>
 					</div>
 				</div>
 
 	<!-- Home Penalty List ----------------------------------- -->
-				<div class="row inherit_w penalty_list margin_top_1"><div class="col inherit_w inherit_h">
+				<div class="row inherit_w penalty_list margin_top_1"><div id="home_penalty_list" class="col inherit_w inherit_h">
 		<!-- HOME INFRACTION 1 --> <!-- these will be added dynamically -->
-					<div class="row inherit_w penalty_list_item">
-						<div class="col inherit_h penalty_col">
-							2
-						</div>
-						<div class="col inherit_h penalty_col">
-							1:15
-						</div>
-						<div class="col inherit_h penalty_col">
-							Roughing
-						</div>
-						<div class="col inherit_h penalty_btn">
-							<button class="inherit_w inherit_h btn_minus">-</button>
-						</div>
-					</div>
+					
 					<!-- end home infraction 1 -->
-
-		<!-- HOME INFRACTION 2 -->
-					<div class="row inherit_w penalty_list_item">
-						<div class="col inherit_h penalty_col">
-							11
-						</div>
-						<div class="col inherit_h penalty_col">
-							0:41
-						</div>
-						<div class="col inherit_h penalty_col">
-							Tripping
-						</div>
-						<div class="col inherit_h penalty_btn">
-							<button class="inherit_w inherit_h btn_minus">-</button>
-						</div>
-					</div>
-					<!-- end home infraction 2 -->
 				</div></div>
 			</div>
 <!-- HOME PENALTIES [end] =============================== -->
@@ -286,41 +229,35 @@
 					<div class="col inherit_h penalty_col"><div class="row inherit_w inherit_h">
 						<div class="col inherit_h penalty_col_1">Number:</div>
 						<div class="col inherit_h penalty_col_2">
-            				<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)" class="inherit_w	inherit_h">
-								<option>1</option>
-								<option>2:30</option>
-								<option>3:45</option>
-							</select>   
+            				<select id="away_new_penalty_number" value="0" class="inherit_w inherit_h"></select>
 						</div>
 					</div></div>
 					<div class="col inherit_h penalty_col"><div class="row inherit_w inherit_h">
-						<div class="col inherit_h penalty_col_4">Penalty Length:</div>
-						<div class="col inherit_h penalty_col_3">
-            				<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)" class="inherit_w	inherit_h">
-								<option>0:15</option>
-								<option>0:30</option>
-								<option>0:45</option>
-							</select>  
+						<div class="col inherit_h penalty_col_1">Penalty Length:</div>
+						<div class="col inherit_h penalty_col_2">
+            				<select id="away_new_penalty_time" value="2" class="inherit_w inherit_h">
+            					<option value="2" >2:00</option>
+								<option value="4" >4:00</option>
+								<option value="5" >5:00</option>
+            				</select> 
 						</div>
 					</div></div>
 					<div class="col inherit_h penalty_col"><div class="row inherit_w inherit_h">
 						<div class="col inherit_h penalty_col_3">Infraction</div>
 						<div class="col inherit_h penalty_col_3">
-            				<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)" class="inherit_w	inherit_h">
-								<option>Roughing</option>
-								<option>Tripping</option>
-								<option>Slashing</option>
+            				<select id="away_new_penalty_infraction" class="inherit_w	inherit_h">
 							</select> 
 						</div>
 					</div></div>
 					<div class="col inherit_h penalty_btn">
-						<button class="inherit_w inherit_h btn_plus">+</button>
+						<button id="add_away_penalty" class="inherit_w inherit_h btn_plus">+</button>
 					</div>
 				</div>
 
 	<!-- Away Penalty List ----------------------------------- -->
-				<div class="row inherit_w penalty_list margin_top_1"><div class="col inherit_w inherit_h">
+				<div class="row inherit_w penalty_list margin_top_1"><div id="away_penalty_list" class="col inherit_w inherit_h">
 		<!-- AWAY INFRACTION 1 --> <!-- these will be added dynamically -->
+		<!-- Example infraction
 					<div class="row inherit_w penalty_list_item">
 						<div class="col inherit_h penalty_col">
 							12
@@ -335,37 +272,8 @@
 							<button class="inherit_w inherit_h btn_minus">-</button>
 						</div>
 					</div>
+				-->
 					<!-- end away infraction 1 -->
-
-
-
-					<div class="row inherit_w penalty_list_item">
-						<div class="col inherit_h penalty_col">12</div>
-						<div class="col inherit_h penalty_col">1:41</div>
-						<div class="col inherit_h penalty_col">Slashing</div>
-						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div>
-					<div class="row inherit_w penalty_list_item">
-						<div class="col inherit_h penalty_col">12</div>
-						<div class="col inherit_h penalty_col">1:41</div>
-						<div class="col inherit_h penalty_col">Slashing</div>
-						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div><div class="row inherit_w penalty_list_item">
-						<div class="col inherit_h penalty_col">12</div>
-						<div class="col inherit_h penalty_col">1:41</div>
-						<div class="col inherit_h penalty_col">Slashing</div>
-						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div><div class="row inherit_w penalty_list_item">
-						<div class="col inherit_h penalty_col">12</div>
-						<div class="col inherit_h penalty_col">1:41</div>
-						<div class="col inherit_h penalty_col">Slashing</div>
-						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div><div class="row inherit_w penalty_list_item">
-						<div class="col inherit_h penalty_col">12</div>
-						<div class="col inherit_h penalty_col">1:41</div>
-						<div class="col inherit_h penalty_col">Slashing</div>
-						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div><div class="row inherit_w penalty_list_item">
-						<div class="col inherit_h penalty_col">12</div>
-						<div class="col inherit_h penalty_col">1:41</div>
-						<div class="col inherit_h penalty_col">Slashing</div>
-						<div class="col inherit_h penalty_btn"><button class="inherit_w inherit_h btn_minus">-</button></div></div>
-					<!-- temp infractions ^ -->
 
 				</div></div>
 			</div>
@@ -399,6 +307,7 @@
 				<div class="row inherit_w end_btn_mid_v margin_top_1"><div class="col inherit_w inherit_h">
 					<button id="period_down" class="inherit_w inherit_h btn_minus">Period Down</button>
 				</div></div>
+
 			</div>
 			<div class="col inherit_h end_btn_sides">
 				<button id="away_goal" class="inherit_w inherit_h">Goal</button>
@@ -418,6 +327,10 @@
 
 		</div>
 <!-- BUTTONS SECTION END -->
+
+
+
+
 	</div></body>
 	<script type="text/javascript" src="/js/events.js"></script>
 	<script type="text/javascript" src="/js/classes.js"></script>
