Fixed file locations and some CSS styling
Updated CSS for the new buttons in Hockey Scoreboard

--- a/public/html/control-panel.html
+++ b/public/html/control-panel.html
@@ -5,8 +5,8 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap" rel="stylesheet">
 
 <!-- JS Scripts for Menu Bar -->
-    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="menu-bar.js"></script>
+    <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="/js/menu-bar.js"></script>
 
 	<title>Control Panel</title>
 </head>
@@ -21,11 +21,7 @@
 			<h1>Control Panel</h1>
 		</div>
 		<div class="col inherit_h menu_mode_div">
-			<!-- <select id="mode_select" onchange="send_event('mode_switch',document.getElementById('game_select').value)" class="inherit_h">
-				<option>Hockey</option>
-				<option>Baseball</option>
-				<option>Football</option>
-			</select>   -->
+			
 		</div>
 	</div>
 <!-- ========================= -->
