--- a/public/html/hockey-scoreboard.html
+++ b/public/html/hockey-scoreboard.html
@@ -5,8 +5,8 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap" rel="stylesheet">
 
 <!-- JS Scripts for Menu Bar -->
-    <script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../menu-bar.js"></script>
+    <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="/js/menu-bar.js"></script>
 
 	<title>Hockey Scoreboard</title>
 </head>
@@ -388,7 +388,8 @@
 					<button id="home_timeout" class="inherit_w inherit_h">Timeout</button>
 				</div></div>
 			</div>
-			<div class="col inherit_h end_btn_sides">
+
+			<div class="col inherit_h end_btn_goal">
 				<button id="home_goal" class="inherit_w inherit_h">Goal</button>
 			</div>
 
@@ -400,7 +401,8 @@
 					<button id="period_down" class="inherit_w inherit_h btn_minus">Period Down</button>
 				</div></div>
 			</div>
-			<div class="col inherit_h end_btn_sides">
+
+			<div class="col inherit_h end_btn_goal">
 				<button id="away_goal" class="inherit_w inherit_h">Goal</button>
 			</div>
 
