Added logo and various updates

--- a/public/html/control-panel.html
+++ b/public/html/control-panel.html
@@ -81,7 +81,7 @@
 
 
 		</div>
-	 <iframe src="/overlay-preview" style="
+	 <iframe src="/html/overlay-preview.html" style="
 		height:1100px;width:2000px;
 		-ms-zoom: 0.5;
 	    -moz-transform: scale(0.5);
