--- a/public/html/overlay-preview.html
+++ b/public/html/overlay-preview.html
@@ -9,7 +9,7 @@
 
 		<div class="grabber" style="position:absolute;top:100px;left:50px;z-index:4">
 			<div class="movebar">Move</div>
-			<object style="z-index:1" id="Scoreboard" type="image/svg+xml" data="/Themes/Default/scoreboard.svg"></object>
+			<object style="z-index:1" id="Scoreboard" type="image/svg+xml" data="/Themes/Test/scoreboard.svg"></object>
 			<div class="movebar">Move</div>
 		</div>
 		<div class="grabber" style="position:absolute;top:600px;left:200px;z-index:2">
