--- a/public/html/overlay.html
+++ b/public/html/overlay.html
@@ -5,10 +5,10 @@
 	<body style="width:1920;height:1080">
 		<div id="graphics">
 		<div style="position:absolute;top:100px;left:50px">
-			<object id="Scoreboard" type="image/svg+xml" data="/Themes/Default/scoreboard.svg"></object>
+			<object id="Scoreboard" type="image/svg+xml" data="/Themes/Test/scoreboard.svg"></object>
 		</div>
-		<div>
-			<object style="position:absolute;top:500px;left:200px" id="Intermission" type="image/svg+xml" data="/Themes/Default/intermission.svg"></object>
+		<div style="position:absolute;top:500px;left:200px">
+			<object id="Intermission" type="image/svg+xml" data="/Themes/Default/intermission.svg"></object>
 		</div>
 		</div>
 	</body>
