Added team settings to menu bar

--- a/public/html/menu-bar.html
+++ b/public/html/menu-bar.html
@@ -6,5 +6,6 @@
 </div>
 <div class="menu_bar_section"><a href="/control-panel"><h2>Control Panel</h2></a></div>
 <div class="menu_bar_section"><a href="/hockey-scoreboard"><h2>Hockey Scoreboard</h2></a></div>
+<div class="menu_bar_section"><a href="/team-settings"><h2>Team Settings</h2></a></div>
 <div class="menu_bar_section"><a href="#"><h2>Temp Page</h2></a></div>
 </html>
