Revert "Fixed Team-settings colour bug"
This reverts commit 55d5d91d0bb54fbd92be45cf678a729df83f4e29.

--- a/public/html/control-panel.html
+++ b/public/html/control-panel.html
@@ -48,7 +48,7 @@
 	</div></div>
 
 	<div class="row inherit_w control_panel_buttons"><div class="col justify-content-center inherit_h control_panel_center">
-		<button class="up" id="btn_Scoreboard" value="true" >Scoreboard</button>
+		<button class="up" id="btn_Scoreboard" value="true" onclick="button_animation(this)">Scoreboard</button>
 		<button class="up" id="btn_Intermission" value="false">Intermission</button>
 		<button class="up" id="btn_Commercial" value="false">Commercial</button>
 		<button class="up" id="btn_Full_Screen" value="false">Full Screen</button>
