--- a/public/html/team-settings.html
+++ b/public/html/team-settings.html
@@ -19,10 +19,10 @@
 				<div class="row inherit_w stats_title_1"><div class="column inherit_w inherit_h">
 					<h3 class="stats_title_text_1">Home</h3>
 				</div></div>
-				<br>League: <select id="home_league_select"></select> 
-				Team: <select id="home_team_select"> </select></br>
-				<br>Current League: <label id="home_current_league"> </label></br>
-				<br>Current Team: <label id="home_current_team"> </label></br>
+				<br>League: <select id="home_league_select">
+				</select></br>
+				<br>Team: <select id="home_team_select">
+				</select></br>
 				<br>Color 1: <input class="home_color1 home_color" type="color" value="#ff0000" id="home_color1"></input></br>
 				<br>Color 2: <input class="home_color2 home_color" type="color" value="#ff0000" id="home_color2"></input></br>
 				<br>Color 3: <input class="home_color3 home_color" type="color" value="#ff0000" id="home_color3"></input></br>
@@ -41,10 +41,10 @@
 				<div class="row inherit_w stats_title_1"><div class="column inherit_w inherit_h">
 					<h3 class="stats_title_text_1">Away</h3>
 				</div></div>
-				<br>League: <select id="away_league_select"></select> 
-				Team: <select id="away_team_select"> </select></br>
-				<br>Current League: <label id="away_current_league"> </label></br>
-				<br>Current Team: <label id="away_current_team"> </label></br>
+				<br>League: <select id="away_league_select">
+				</select></br>
+				<br>Team: <select id="away_team_select">
+				</select></br>
 				<br>Color 1: <input class="away_color1 away_color" type="color" value="#ff0000" id="away_color1"></input></br>
 				<br>Color 2: <input class="away_color2 away_color" type="color" value="#ff0000" id="away_color2"></input></br>
 				<br>Color 3: <input class="away_color3 away_color" type="color" value="#ff0000" id="away_color3"></input></br>
